css/containers.css
.container,
.panel,
.card {
    position: relative;
    margin: auto;
}

.container {
    padding: 0.01em 16px;
}

.panel,
.card {
    margin-top: 16px;
    margin-bottom: 16px;
    display: block;
}

.card {
    -webkit-align-self: flex-start;
        -ms-flex-item-align: start;
            align-self: flex-start;
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: -ms-flexbox;
    display: flex;
      -webkit-box-orient: vertical;
         -moz-box-orient: vertical;
     -webkit-box-direction: normal;
        -moz-box-direction: normal;
    -webkit-flex-direction: column;
        -ms-flex-direction: column;
            flex-direction: column;
    z-index: 1;
    background: #fff;
    font-weight: 400;
    border-radius: 2px;
    overflow: hidden;
}

.card.same-height {
    -webkit-align-self: stretch;
        -ms-flex-item-align: stretch;
            align-self: stretch;
}

.card .text,
.panel {
    padding: 16px;
}

.card .text {
    width: 100%;
    opacity: .6;
    -webkit-box-flex: 1;
    -webkit-flex: 1;
       -moz-box-flex: 1;
        -ms-flex: 1;
            flex: 1;
}

.card .media {
    width: 100%;
    height: auto;
    min-height: 100px;
    position: relative;
    overflow: hidden;
}

.card .media.hoverable:hover img {
    -webkit-transform: scale(1.1);
        -ms-transform: scale(1.1);
            transform: scale(1.1);
    opacity: .9;
}

.card .title {
    color: #fff;
    font-size: 24px;
    font-weight: 300;
    padding: 16px;
    position: absolute;
    bottom: 0;
    left: 0;
}

.card .actions {
    width: 100%;
    padding: 8px;
    font-size: 16px;
    border-top: 1px solid rgba(0, 0, 0, .2);
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -moz-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-flex-wrap: wrap;
        -ms-flex-wrap: wrap;
            flex-wrap: wrap;
}

.card .menu {
    position: absolute;
    top: 16px;
    right: 16px;
}

